--- a/pagina.html
+++ b/pagina.html
@@ -27,9 +27,9 @@
             <h3 class="typing-text">Yo soy <span></span></h3>
             <p>Esta es una pagina dedicada a contar mis hobbies y experiencias, y para familiarizarme con el mundo del desarrollo web.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/share/1BDeQpfSiu/?mibextid=wwXIfr"><i class="fa-brands fa-facebook"></i></a>
+                <a href="wa.me/+523122411431"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com/velasc0_dvc?igsh=MW82anJmaGFoYmR6dw%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
 
@@ -37,4 +37,5 @@
         </div>
     </section>
 </body>
+
 </html>
