--- a/metas.html
+++ b/metas.html
@@ -11,7 +11,7 @@
   <header>
     <a href="#" class="logo">Diego</a>
     <nav>
-      <a href="pagina.html">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="otroindice.html" class="active">Habilidades</a>
       <a href="metas.html">Proyectos</a>
   </header>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
