--- a/otroindice.html
+++ b/otroindice.html
@@ -11,7 +11,7 @@
   <header>
     <a href="#" class="logo">Diego</a>
     <nav>
-      <a href="pagina.html">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="otroindice.html" class="active">Habilidades</a>
       <a href="metas.html">Proyectos</a>
   </header>
@@ -109,3 +109,4 @@
   </section>
 </body>
 </html>
+
