--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://www.facebook.com/share/1BDeQpfSiu/?mibextid=wwXIfr"><i class="fa-brands fa-facebook"></i></a>
                 <a href="wa.me/+523122411431"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://www.instagram.com/velasc0_dvc?igsh=MW82anJmaGFoYmR6dw%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/dietita"><i class="fa-brands fa-github"></i></a>
             </div>
 
             
@@ -39,3 +39,4 @@
 </body>
 
 </html>
+
